--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>A Portfolio</title>
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="./public/styles/main.css">
 
 </head>
 
@@ -23,7 +23,7 @@
     <div class="project">
         <img src="mockup3.jpg" alt="Mockup 3">
     </div>
-    <script type="module" src="../scripts/main.js"></script>
+    <script type="module" src="./public/scripts/main.mjs"></script>
 </body>
 
 </html>
