--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <div class="project">
         <img src="mockup3.jpg" alt="Mockup 3">
     </div>
-    <script type="module" src="./public/scripts/main.mjs"></script>
+    <script type="module" src="./public/scripts/main.mjs" crossorigin="anonymous"></script>
 </body>
-
 </html>
