--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <div class="project">
         <img src="mockup3.jpg" alt="Mockup 3">
     </div>
-    <script type="module" src="./public/scripts/main.mjs" crossorigin="anonymous"></script>
+    <script type="module" src="./public/scripts/main.mjs" defer crossorigin="anonymous"></script>
 </body>
 </html>
