update project files

--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
 <body>
     <h1>My Portfolio</h1>
 
-    <div class="project" data-project-details="{title:'Mockup Project',label:'project1',description:'the first project',url:'/project1.html#details',tags:'favorite, public, mockup'}">
+    <div class="project"
+        data-title="Mockup Project" data-label="project1" data-description="the first project" data-url="/project1.html#details" data-tags='favorite, public'>
         <img src="mockup1.jpg" alt="Mockup 1">
     </div>
 
-    <div class="project">
+    <div class="project"
+        data-title="Mockup Project" data-label="project1" data-description="the first project" data-url="/project1.html#details" data-tags='favorite, public'>
         <img src="mockup2.jpg" alt="Mockup 2">
     </div>
 
-    <div class="project">
+    <div class="project"
+        data-title="Mockup Project" data-label="project1" data-description="the first project" data-url="/project1.html#details" data-tags='favorite, public'>
         <img src="mockup3.jpg" alt="Mockup 3">
     </div>
-    <script type="module" src="./public/scripts/main.mjs" defer crossorigin="anonymous"></script>
+    <script type="module" src="./public/scripts/main.mjs"></script>
 </body>
+
 </html>
